// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders correctly with green option set 1`] = `
<button
  className="sc-bdVaJa cHCpXR"
/>
`;

exports[`Button component renders correctly with no options 1`] = `
<button
  className="sc-bdVaJa cnOIaA"
/>
`;

exports[`Button component renders correctly with outline option set 1`] = `
<button
  className="sc-bdVaJa cPoPuq"
/>
`;

exports[`Button component renders correctly with red option set 1`] = `
<button
  className="sc-bdVaJa bEyvCe"
/>
`;
